# finansowy-kompas

./: README.MD
backend/: .env_default  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: .gitignore  main.py  schemas.py
backend/api/routes/: __init__.py  excel.py  fun_fact.py  fun_facts.py  salary.py  user_profile.py
backend/api/services/: __init__.py  excel_service.py
backend/config/: __init__.py  settings.py
backend/data/: usage.xlsx
backend/llm/: client.py
backend/llm/classify_job/: JobEnum.py  classify_job.py
backend/llm/estimated_monthly_salary/: Salary.py  __init__.py  get_estimated_monthly_salary.py
backend/llm/fun_facts/: FunFact.py  get_fun_fact.py
backend/llm/random_nonfunctional_periods/: NonFunctionalEvent.py  __init__.py  generate_break_simulation.py
backend/models/: PensionModel.py
backend/models/calculate_salary/: calculate_salary.py  experience_multiplier.py
backend/models/data/: poland_historical_macro_data.py
backend/models/estimate_salary_with_experience/: calculate_regression.py  generate_regression_data.py  plot_salary_data.py
backend/models/macroeconomics/: MacroeconomicFactors.py  include_macroeconomics_factors.py
backend/models/nonfunctional_periods/: generate_periods.py
backend/models/pension_models/: MacroeconomicFactors.py  RetirementAgeConfig.py  ZUSContributionRates.py  include_macroeconomics_factors.py
backend/models/salary_regressions/: calculate_regression.py  create_dict_from_csv.py  (+3 more)
backend/src/: main.py
backend/utils/: __init__.py  logging_config.py  use_cwd.py
(+73 files in other folders)
