[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aleksander Kluska <kluskaolek2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { version = "0.118.0", extras = ["standard"] }
pydantic-settings = "2.11.0"
matplotlib = "3.10.6"
pandas = "2.3.3"
pandas-stubs = "2.3.2.250926"
scikit-learn = "1.7.2"
scipy = "1.16.2"
scipy-stubs = "1.16.2.0"
pydantic-ai-slim = { version = "1.0.15", extras = ["google"] }

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
mypy = "1.18.2"
ruff = "0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
